--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -7,6 +7,86 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <header id="header">
+        <div id="header-img">
+            <img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="">
+        </div>
+        <nav id="nav-bar">
+            <ul>
+                <li><a class="nav-link" href="#">Features</a></li>
+                <li><a class="nav-link" href="#">How It Works</a></li>
+                <li><a class="nav-link" href="#">Pricing</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div id="hero">
+        <h2>Handcrafted, home-made masterpieces</h2>
+        <form id="form" action=" https://www.freecodecamp.com/email-submit">
+            <input type="email" id="email" placeholder="Enter your email address" required><br>
+            <input type="submit" id="submit" value="GET STARTED">
+        </form>
+    </div>
+    <main>
+        <div id="text-container">
+            <div class="text-box">
+                <div class="text-logo"></div>
+                <div class="text-detail">
+                    <h2>Premium Materials</h2>
+                    <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+                </div>
+            </div>
+            <div class="text-box">
+                <div class="text-logo"></div>
+                <div class="text-detail">
+                    <h2>Fast Shipping</h2>
+                    <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+                </div>
+            </div>
+            <div class="text-box">
+                <div class="text-logo"></div>
+                <div class="text-detail">
+                    <h2>
+                        Quality Assurance</h2>
+                    <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+                </div>
+            </div>
+        </div>
+        <div id="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div id="row-content">
+            <div class=three-box>
+                <h3>TENOR TROMBONE</h3>
+                <h2>&#36;600</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam!</p>
+                <button>SELECT</button>
+            </div>
+            <div class=three-box>
+                <h3>BASS TROMBONE</h3>
+                <h2>&#36;900</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam!</p>
+                <button>SELECT</button>
+            </div>
+            <div class=three-box>
+                <h3>VALVE TROMBONE</h3>
+                <h2>&#36;1200</h2>
+                <p>Plays similar to a Trumpet
+                    Great for Jazz Bands
+                    Lorem ipsum dolor.
+                    Lorem ipsum.</p>
+                <button>SELECT</button>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div id="footer-column">
+            <ul>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <p>Copyright 2016, Original Trombones</p>
+        </div>
+    </footer>
 </body>
 </html>
