--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer id="footer">
         <div id="footer-column">
             <ul>
                 <li><a href="#">Privacy</a></li>
