finish portfolio template

--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -5,8 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav id="navbar">
+        <div>
+            <ul>
+                <li><a href="#welcome-section">About</a></li>
+                <li><a href="#projects">Work</a></li>
+                <li><a href="#profile-link">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <section id="welcome-section">
+        <h1>Hey I am Bas :)</h1>
+        <p>a web developer</p>
+    </section>
+    <section id="projects">
+        <h1 class="projects-title">These are some of my projects</h1>
+        <div class="grid-container">
+            <div id="item-1" class="grid-box">
+                <a href="#">
+                    
+                    <img src="https://media-exp1.licdn.com/dms/image/C560BAQHMnA03XDdf3w/company-logo_200_200/0?e=2159024400&v=beta&t=C7KMOtnrJwGrMXmgIk2u1B8a7VRfgxMwXng9cdP9kZk" alt="">
+                    <p><span class="code">&lt;</span>
+                        My project
+                    <span class="code">&#47;&gt;</span></p>
+                </a>
+            </div>
+            <div id="item-2" class="grid-box">
+                <a href="#">
+                    <img src="https://media-exp1.licdn.com/dms/image/C560BAQHMnA03XDdf3w/company-logo_200_200/0?e=2159024400&v=beta&t=C7KMOtnrJwGrMXmgIk2u1B8a7VRfgxMwXng9cdP9kZk" alt="">
+                    <p><span class="code">&lt;</span>
+                        My project
+                    <span class="code">&#47;&gt;</span></p>
+                </a>
+            </div>
+            <div id="item-3" class="grid-box">
+                <a href="#">
+                    <img src="https://media-exp1.licdn.com/dms/image/C560BAQHMnA03XDdf3w/company-logo_200_200/0?e=2159024400&v=beta&t=C7KMOtnrJwGrMXmgIk2u1B8a7VRfgxMwXng9cdP9kZk" alt="">
+                    <p><span class="code">&lt;</span>
+                        My project
+                    <span class="code">&#47;&gt;</span></p>
+                </a>
+            </div>
+            <div id="item-4" class="grid-box">
+                <a href="#">
+                    <img src="https://media-exp1.licdn.com/dms/image/C560BAQHMnA03XDdf3w/company-logo_200_200/0?e=2159024400&v=beta&t=C7KMOtnrJwGrMXmgIk2u1B8a7VRfgxMwXng9cdP9kZk" alt="">
+                    <p><span class="code">&lt;</span>
+                        My project
+                    <span class="code">&#47;&gt;</span></p>
+                </a>
+            </div>
+            <div id="item-5" class="grid-box">
+                <a href="#">
+                    <img src="https://media-exp1.licdn.com/dms/image/C560BAQHMnA03XDdf3w/company-logo_200_200/0?e=2159024400&v=beta&t=C7KMOtnrJwGrMXmgIk2u1B8a7VRfgxMwXng9cdP9kZk" alt="">
+                    <p><span class="code">&lt;</span>
+                        My project
+                    <span class="code">&#47;&gt;</span></p>
+                </a>
+            </div>
+            <div id="item-6" class="grid-box">
+                <a href="#">
+                    <img src="https://media-exp1.licdn.com/dms/image/C560BAQHMnA03XDdf3w/company-logo_200_200/0?e=2159024400&v=beta&t=C7KMOtnrJwGrMXmgIk2u1B8a7VRfgxMwXng9cdP9kZk" alt="">
+                    <p><span class="code">&lt;</span>
+                        My project
+                    <span class="code">&#47;&gt;</span></p>
+                </a>
+            </div>
+        </div>
+        <div class="show-all">
+            <a href="#">Show all <span class="greater">></span></a>
+        </div>
+    </section>
+    <section id="profile-link">
+        <h1>Let's work together...</h1>
+        <p>How do you take your coffee?</p>
+        <ul class="all-link">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">GitHub</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Send a mail</a></li>
+            <li><a href="#">Call me</a></li>
+        </ul>
+    </section>
+    <footer>
+        <p>
+            © Created for
+            <a href="https://www.freecodecamp.com/" target="_blank">freeCodeCamp <i class="fab fa-free-code-camp"></i></a>
+          </p>
+    </footer>
 </body>
 </html>
